[package]
name = "dll_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "breakneck"
path = "src/lib.rs"
crate-type = ["cdylib"]


[[bin]]
name = "injector"
path = "src/main.rs"


[dependencies]
chacha20 = "0.9.1"
color-eyre = "0.6.3"
dll-syringe = "0.17.0"
log = "0.4.21"
pelite = "0.10.0"
rand = "0.9.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
windows-sys = {version = "0.60.2", features = [
                "Win32_Foundation",
                "Win32_System_SystemServices",
                "Win32_UI_WindowsAndMessaging",
                "Win32_System_LibraryLoader",
                "Win32_System_Diagnostics_Debug",
                "Win32_System_Kernel",
                "Win32_System_Memory"
                ]}
